# triet

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  HANDOFF_PROTOCOL.md  IMPLEMENTATION_CHECKLIST.md  README.md  ROADMAP.md  SPEC.md  TODO.md  VISION.md  rustfmt.toml
crates/triet-bootstrap/: Cargo.toml
crates/triet-bootstrap/src/: lib.rs
crates/triet-bootstrap/tests/: bootstrap_determinism.rs  bootstrap_loop.rs  bootstrap_self_compile.rs  const_item_smoke.rs  cross_module_field_resolution.rs  driver_smoke.rs  enum_struct_eq_smoke.rs  ir_lowerer_block_expr_smoke.rs  ir_lowerer_call_loop_smoke.rs  ir_lowerer_dump_smoke.rs  ir_lowerer_elvis_smoke.rs  ir_lowerer_if_expr_smoke.rs  ir_lowerer_lower_source_smoke.rs  ir_lowerer_match_expr_smoke.rs  ir_lowerer_match_mutation_phi_smoke.rs  ir_lowerer_method_call_smoke.rs  ir_lowerer_outcome_default_smoke.rs  ir_lowerer_outcome_propagate_smoke.rs  ir_lowerer_struct_enum_outcome_smoke.rs  ir_lowerer_types_smoke.rs  ir_lowerer_while_phi_smoke.rs  jit_tier_down_audit.rs  khi_serde_smoke.rs  lexer_differential.rs  lexer_self_smoke.rs  loop_mutation_phi.rs  lowerer_differential.rs  match_arm_mutation_phi.rs  modules_cycle_smoke.rs  modules_differential.rs  modules_loader_smoke.rs  modules_resolver_smoke.rs  modules_types_smoke.rs  parser_arena_smoke.rs  parser_differential.rs  parser_expr_smoke.rs  parser_item_smoke.rs  parser_pattern_smoke.rs  parser_recovery_smoke.rs  parser_stmt_smoke.rs  (+15 more)
crates/triet-cli/: Cargo.toml
crates/triet-cli/benches/: vm_vs_interpreter.rs
crates/triet-cli/src/: fmt.rs  main.rs
crates/triet-cli/tests/: atomic_counter_e2e.rs  atomic_counter_multi_worker.rs  bootstrap_chain.rs  capability_gate_e2e.rs  cli_tests.rs  dao.package  demo_programs.rs  dev_root_test.tri  diagnostics.rs  differential_tests.rs  error_handling_demo.rs  outcome_e2e.rs  store_cli.rs
crates/triet-cli/tests/snapshots/: cli_tests__cyclic_import_error.snap  cli_tests__file_not_found_error.snap  cli_tests__reserved_namespace.snap  cli_tests__visibility_violation.snap  demo_programs__module_system_demo.snap
crates/triet-core/: Cargo.toml
crates/triet-core/src/: error.rs  integer.rs  lib.rs  long.rs  memory.rs  trit.rs  tryte.rs
crates/triet-driver/: Cargo.toml
crates/triet-driver/src/: main.rs
crates/triet-driver/tests/: adr0058_lat2_heap_merge_counting.rs  block_tail_drop_counting.rs  capability_defer_trap.rs  cfg_parity_return_heap_counting.rs  construct_from_local_counting.rs  enum_field_moveout_counting.rs  enum_field_moveout_subprocess.rs  enum_heap_payload_counting.rs  enum_in_struct_counting.rs  enum_payload_subborrow_counting.rs  get_by_value_aggregate_counting.rs  get_ref_aggregate_counting.rs  hashmap_nullable_drop_counting.rs  heap_nullable_field_counting.rs  heap_nullable_return_present_counting.rs  heap_nullable_struct_local_counting.rs  heap_shim_consuming_temp_counting.rs  heap_shim_hashmap_key_borrow_counting.rs  heap_shim_temp_leak_counting.rs  hp5_heap_error_match_counting.rs  integration_tests.rs  is_empty_temp_leak_counting.rs  match_literal_t.rs  match_trit_t6.rs  multilevel_field_moveout_counting.rs  nullable_field_moveout_counting.rs  nullable_map_heap_output_counting.rs  string_field_moveout_counting.rs  string_nullable_drop_counting.rs  string_nullable_match_move_counting.rs  struct_arg_move_counting.rs  struct_assign_move_counting.rs  struct_field_moveout_phase2_counting.rs  struct_heap_field_lock_counting.rs  struct_nested_heap_counting.rs  trait_dispatch_t5.rs  typed_hashmap_counting.rs  typed_vector_counting.rs  vector_nullable_drop_counting.rs  vector_userstruct_counting.rs  (+1 more)
crates/triet-driver/tests/fixtures/: 01_add.tri  02_pow.tri  03_pow_nested.tri  04_pow_complex.tri  05_pow_var.tri  06_fibonacci.tri  07_luk_and.tri  08_div_mod.tri  09_abs_diff.tri  100_endgame_string_roundtrip.tri  101_nested_return_borrow_run.tri  102_nested_borrow_uaf_e2450.tri  103_enum_non_exhaustive_e1026.tri  104_e2420_chain_move.tri  105_e2420_branch_move.tri  106_enum_wildcard.tri  107_e1025_null_in_binary_outcome.tri  108_outcome_non_exhaustive_match.tri  109_outcome_return_type_mismatch.tri  10_subtract.tri  (+450 more)
crates/triet-interpreter/: Cargo.toml
crates/triet-interpreter/src/: builtins.rs  env.rs  error.rs  interpret.rs  interpret_resolved.rs  lib.rs  value.rs
crates/triet-ir/: Cargo.toml
crates/triet-ir/src/: constant.rs  display.rs  instr.rs  lib.rs  lowerer.rs  module.rs  serde.rs  types.rs  verify.rs  vm.rs
crates/triet-ir/tests/: ir_snapshots.rs
crates/triet-jit/: Cargo.toml
crates/triet-jit/src/: aot.rs  codegen.rs  lib.rs  loader.rs  mir_lower.rs  shims.rs
crates/triet-lexer/: Cargo.toml
crates/triet-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/triet-logic/: Cargo.toml
crates/triet-logic/src/: lib.rs  trilean.rs
crates/triet-lower/: Cargo.toml
crates/triet-lower/src/: lib.rs
crates/triet-modules/: Cargo.toml
crates/triet-modules/src/: cycle.rs  error.rs  lib.rs  loader.rs  module.rs  path.rs  resolver.rs  stdlib.rs
crates/triet-pack/: Cargo.toml
crates/triet-pack/src/: capability_link.rs  capability_resolver.rs  error.rs  hash.rs  lib.rs  linker.rs  lockfile.rs  package_manifest.rs  policy.rs  resolver.rs  serde.rs  store.rs  strict_parser.rs  tty_prompt.rs  types.rs
crates/triet-pack/tests/: cross_package_demo.rs  shared_loading.rs
crates/triet-parser/: Cargo.toml
crates/triet-parser/src/: error.rs  expr.rs  item.rs  lib.rs  parser.rs  pattern.rs  stmt.rs  type_expr.rs
crates/triet-syntax/: Cargo.toml
crates/triet-syntax/src/: arena.rs  expr.rs  item.rs  lib.rs  numeric.rs  pattern.rs  span.rs  stmt.rs  type_ast.rs  visibility.rs
crates/triet-typecheck/: Cargo.toml
crates/triet-typecheck/src/: borrow_check.rs  capability_check.rs  check.rs  check_resolved.rs  env.rs  error.rs  lib.rs  types.rs
crates/triet-typecheck/tests/: borrow_e2411_e2403.rs  borrow_e2440_nll.rs  capability_pipeline.rs  diagnostics_format.rs  generic_chain_inference.rs  lifetime_elision.rs  match_scalar_exhaustiveness.rs  outcome_zero_context.rs  trilean_refined_annotation.rs
(+271 files in other folders)
