[workspace]
resolver = "3"
members = [
    "crates/triet-core",
    "crates/triet-logic",
    "crates/triet-syntax",
    "crates/triet-lexer",
    "crates/triet-parser",
    "crates/triet-typecheck",
    "crates/triet-interpreter",
    "crates/triet-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
authors = ["Giang Hoàng"]
repository = "https://github.com/gianghoang/triet"
description = "Triết — an AI-first balanced-ternary programming language"

[workspace.dependencies]
triet-core = { path = "crates/triet-core", version = "0.1.0" }
triet-logic = { path = "crates/triet-logic", version = "0.1.0" }
triet-syntax = { path = "crates/triet-syntax", version = "0.1.0" }
triet-lexer = { path = "crates/triet-lexer", version = "0.1.0" }
triet-parser = { path = "crates/triet-parser", version = "0.1.0" }
triet-typecheck = { path = "crates/triet-typecheck", version = "0.1.0" }
triet-interpreter = { path = "crates/triet-interpreter", version = "0.1.0" }

# External deps — pinned at workspace level for consistency
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
logos = "0.15"
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
