[workspace]
resolver = "3"
members = [
    "crates/triet-core",
    "crates/triet-logic",
    "crates/triet-syntax",
    "crates/triet-lexer",
    "crates/triet-parser",
    "crates/triet-modules",
    "crates/triet-ir",
    "crates/triet-pack",
    "crates/triet-typecheck",
    "crates/triet-interpreter",
    "crates/triet-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
authors = ["Giang Hoàng"]
repository = "https://github.com/gianghoang/triet"
description = "Triết — an AI-first balanced-ternary programming language"

[workspace.dependencies]
triet-core = { path = "crates/triet-core", version = "0.3.0" }
triet-logic = { path = "crates/triet-logic", version = "0.3.0" }
triet-syntax = { path = "crates/triet-syntax", version = "0.3.0" }
triet-lexer = { path = "crates/triet-lexer", version = "0.3.0" }
triet-parser = { path = "crates/triet-parser", version = "0.3.0" }
triet-modules = { path = "crates/triet-modules", version = "0.3.0" }
triet-ir = { path = "crates/triet-ir", version = "0.3.0" }
triet-pack = { path = "crates/triet-pack", version = "0.3.0" }
triet-typecheck = { path = "crates/triet-typecheck", version = "0.3.0" }
triet-interpreter = { path = "crates/triet-interpreter", version = "0.3.0" }

# External deps — pinned at workspace level for consistency
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
logos = "0.15"
clap = { version = "4", features = ["derive"] }
# Fixed-size big-int backing for `Long` (81-trit, range > i128). Uses
# `BInt<3>` = 192-bit signed integer; no_std + no heap allocation.
bnum = "0.14"
# Snapshot testing for IR output regression detection.
insta = { version = "1", features = ["yaml"] }
# Benchmarking framework for VM vs interpreter performance.
criterion = { version = "0.5", features = ["html_reports"] }
# BLAKE3 hash for ABI metadata `iface_hash` + `impl_hash` (ADR-0011).
# No-patent, deterministic, 32-byte output, fast. Used by `triet-pack`.
blake3 = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
