[package]
name = "triet-bootstrap"
description = "Self-hosting bootstrap test harness for Triết (v0.7+) — determinism gates, differential tests, and stage-by-stage bootstrap loop verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
triet-modules.workspace = true
triet-typecheck.workspace = true
triet-ir.workspace = true
triet-pack.workspace = true
# v0.7.4.2 stdlib_stubs_vm IO test (read/write/exists round-trip).
tempfile = "3"
