[package]
name = "triet-bootstrap"
description = "Self-hosting bootstrap test harness for Triết (v0.7+) — determinism gates, differential tests, and stage-by-stage bootstrap loop verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-lexer.workspace = true
triet-modules.workspace = true
triet-typecheck.workspace = true
triet-ir.workspace = true
triet-pack.workspace = true
# v0.11.x (Hướng A) jit_tier_down_audit: measure which self-host
# compiler functions tier down (don't JIT) + why, to bound the
# JIT-coverage work that unblocks the bootstrap gate lift.
triet-jit.workspace = true
# v0.7.5.6b parser_differential: byte-diff between Rust parser and
# the Triết-in-Triết port at `compiler/parser.tri`.
triet-parser.workspace = true
triet-syntax.workspace = true
# v0.7.4.2 stdlib_stubs_vm IO test (read/write/exists round-trip).
tempfile = "3"
# v0.7.4.3-error.2: filter warning-severity diagnostics (W2001) from
# the determinism test so legacy `null` keywords in examples/ still
# build cleanly until the migration tool ships in v0.7.4.3-error.4.
miette.workspace = true
