[package]
name = "triet-cli"
description = "Command-line interface for Triết — `triet` binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "triet"
path = "src/main.rs"

[dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-lexer.workspace = true
triet-parser.workspace = true
triet-typeck.workspace = true
triet-eval.workspace = true
clap.workspace = true
miette.workspace = true
