[package]
name = "triet-cli"
description = "Command-line interface for Triết — `triet` binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "triet"
path = "src/main.rs"

[dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-lexer.workspace = true
triet-parser.workspace = true
triet-typecheck.workspace = true
triet-interpreter.workspace = true
triet-modules.workspace = true
triet-ir.workspace = true
triet-pack = { path = "../triet-pack", version = "0.5.0" }
clap.workspace = true
miette.workspace = true

[dev-dependencies]
triet-syntax.workspace = true
tempfile = "3"
insta = "1.47.2"
criterion.workspace = true

[[bench]]
name = "vm_vs_interpreter"
harness = false
