[package]
name = "triet-core"
description = "Core balanced ternary types and arithmetic for Triết"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
bnum.workspace = true
