[package]
name = "triet-interpreter"
description = "Tree-walking interpreter for Triết v0.1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-modules.workspace = true
triet-syntax.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
triet-parser.workspace = true
tempfile = "3"
