[package]
name = "triet-ir"
description = "Triết IR — register-based SSA intermediate representation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-modules.workspace = true
