[package]
name = "triet-ir"
description = "Triết IR — register-based SSA intermediate representation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-modules.workspace = true
triet-syntax.workspace = true
blake3.workspace = true

[dev-dependencies]
insta.workspace = true
# Temp directories for v0.7.3.4 IO builtin tests (ReadFile/WriteFile/
# FileExists). Pinned at workspace `3` (matches triet-modules + triet-pack).
tempfile = "3"
