[package]
name = "triet-jit"
description = "Triết JIT — Cranelift-backed Tier 2 backend per ADR-0030"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Workspace inherits `unsafe_code = "forbid"`, but JIT-side native
# dispatch fundamentally needs `mem::transmute` of a fn pointer per
# ADR-0030 §3 (and Cranelift JIT execution model). This crate is the
# **only** place in the workspace allowed to introduce unsafe; the
# override drops forbid → deny so per-item `#[allow]` is permitted
# at the documented call sites. All other strict lints kept.
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
# v0.10.x.jit.2b — shims construct `RuntimeValue::Integer(triet_core::
# Integer)` etc. when marshaling ABI args into RuntimeValues for
# `triet_ir::dispatch_builtin`.
triet-core.workspace = true
triet-ir.workspace = true
triet-logic.workspace = true
triet-modules.workspace = true
# Cranelift backend pinned per ADR-0030 §3. Choices:
#   - cranelift-codegen: SSA IR + machine-code emitter (target-agnostic).
#   - cranelift-frontend: FunctionBuilder DSL for emitting Cranelift IR.
#   - cranelift-jit: in-process JIT runtime (W^X mmap + symbol lookup).
#   - cranelift-module: Module trait abstraction (JITModule implements).
# Version 0.132 (current at v0.9.x.jit.1 scaffold, 2026-05-30).
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-jit = "0.132"
cranelift-module = "0.132"
# v0.11.x.jit.3 (ADR-0033 §1) — AOT cache: `cranelift-object` emits a
# relocatable ELF `.o` from the SAME Triết IR translator (Path A
# persist); `object` parses it back (symbol table + relocations) for
# the Path-A loader. `memmap2` (RW→RX loaded code) joins in Step 3.
cranelift-object = "0.132"
object = "0.39"
# v0.11.x.jit.3 Step 3 — Path-A relocating loader: anonymous RW mmap →
# patch relocations → `make_exec` (RX). W^X by construction (MmapMut is
# never executable; make_exec drops write) per ADR-0033 Addendum §4c.
memmap2 = "0.9"
# Host-ISA builder (target detection) — needed for JITBuilder::with_isa.
cranelift-native = "0.132"
thiserror.workspace = true

[dev-dependencies]
# v0.11.x.jit.3 Step 3 — property-fuzz the relocation patcher's
# arithmetic core (ADR-0033 Addendum safety constraint 4b).
proptest = "1"

