[package]
name = "triet-jit"
description = "Triết JIT — Cranelift-backed native codegen (Track B, MIR-based)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Workspace inherits `unsafe_code = "forbid"`, but JIT-side native
# dispatch fundamentally needs `mem::transmute` of a fn pointer per
# ADR-0030 §3 (and Cranelift JIT execution model). This crate is the
# **only** place in the workspace allowed to introduce unsafe; the
# override drops forbid → deny so per-item `#[allow]` is permitted
# at the documented call sites.
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
# Track B — MIR-based JIT. Only needs triet-mir.
triet-mir = { path = "../triet-mir" }
# Cranelift JIT backend
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-jit = "0.132"
cranelift-module = "0.132"
# AOT cache (Phase 3.5) — cranelift-object emission + ELF loader
cranelift-object = "0.132"
object = "0.39"
memmap2 = "0.9"
# Host-ISA builder (target detection)
cranelift-native = "0.132"
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
triet-borrowck = { path = "../triet-borrowck" }
