[package]
name = "triet-lexer"
description = "Lexer/tokenizer for Triết source code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
logos.workspace = true
thiserror.workspace = true
miette.workspace = true
