[package]
name = "triet-logic"
description = "Bool3 and 3-valued logic (Łukasiewicz Ł3, Kleene K3) for Triết"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-core.workspace = true
