[package]
name = "triet-modules"
description = "Module loader, name resolver, and cyclic detection for Triết"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-syntax.workspace = true
triet-parser.workspace = true
triet-lexer.workspace = true
thiserror.workspace = true
miette.workspace = true
