[package]
name = "triet-parser"
description = "Parser for Triết — token stream to AST"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-syntax.workspace = true
triet-lexer.workspace = true
thiserror.workspace = true
miette.workspace = true
