[package]
name = "triet-typecheck"
description = "Type checker for Triết"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
triet-core.workspace = true
triet-logic.workspace = true
triet-modules.workspace = true
triet-pack.workspace = true
triet-syntax.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
triet-parser.workspace = true
tempfile = "3"
